--- a/reportCG.tex
+++ b/reportCG.tex
@@ -42,7 +42,7 @@ Tramite la seconda, invece, catturo la posizione del mouse durante il trasciname
 \section{LAB-02}
 
 \paragraph{}
-Nello svolgimento del secondo laboratorio, ho deciso di riprodurre un cielo notturno dove si trovano dieci piccole fonti di luce (detti aloni) e un cerchio di luce più grande (detto sole), che segue il movimento del mouse.\\
+Nello svolgimento del secondo laboratorio ho deciso di riprodurre un cielo notturno dove si trovano dieci piccole fonti di luce (detti aloni) e un cerchio di luce più grande (detto sole), che segue il movimento del mouse.\\
 Quando il sole (i.e. il mouse) passa sopra un alone, quest'ultimo scompare (dando l'effetto di venire inglobato dal sole). Se il sole tocca uno dei bordi dello schermo, si incorre in una penalità: tutti gli aloni inglobati tornano alla loro posizione iniziale (in questo modo la partita ricomincia da capo).\\
 Lo scopo del gioco è inglobare (i.e. passare con il sole sopra) tutti gli aloni.\\
 Presentiamo ora il modo in cui sono stati realizzati i vari oggetti presenti nella scena: il cielo, gli aloni, il sole e i sistemi particellari.
